--- a/My Profile/index.html
+++ b/My Profile/index.html
@@ -40,7 +40,7 @@
                         <a href="mailto:pazhanisamy3434@gmail.com?subject=feedback&body=Hai Pazhanisamy.k/" target="pazhanisamy3434@gmail.com" class="profile__social-link">
                             <i class="ri-google-line"></i>
                         </a>
-                        <a href="" target="" class="profile__social-link">
+                        <a href="https://github.com/pazhanisamyk?tab=repositories" target="" class="profile__social-link">
                             <i class="ri-github-line"></i>
                         </a>
                     </ul>
