--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="https://www.linkedin.com/in/pazhani-samy-15a977178" target="" class="profile__social-link">
                             <i class="ri-linkedin-line"></i>
                         </a>
-                        <a href="mailto:pazhanisamy3434@gmail.com?subject=feedback&body=Hai Pazhanisamy.k/" target="pazhanisamy3434@gmail.com" class="profile__social-link">
+                        <a href="mailto:pazhanisamy3434@gmail.com?subject=feedback&body=Hai Pazhanisamy.k" target="pazhanisamy3434@gmail.com" class="profile__social-link">
                             <i class="ri-google-line"></i>
                         </a>
                         <a href="https://github.com/pazhanisamyk?tab=repositories" target="" class="profile__social-link">
