--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">2+</h3>
-                        <p class="profile__info-description">realtime<br>projects (in progress)</p>
+                        <p class="profile__info-description">realtime projects<br> (in progress)</p>
                     </div>
                 </div>
 
