--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Mobile Selling WebSite</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a download="" href="assets/proimgs/akps mobile.zip" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -124,7 +124,7 @@
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Employee Management System</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a download="" href="assets/proimgs/ems.zip" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -138,7 +138,7 @@
                                 <div>
                                     <span class="projects__subtitle">Android App (flutter)</span>
                                     <h3 class="projects__title">Organic Products Selling App</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a download="" href="assets/proimgs/ornat.zip" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -152,7 +152,7 @@
                                 <div>
                                     <span class="projects__subtitle">Android App (java)</span>
                                     <h3 class="projects__title">Offline Music Player</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a download="" href="assets/proimgs/music.zip" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
