removed unused codes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Pazhanisamy Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -539,32 +539,6 @@
           
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4922.823454249395!2d79.57791219089646!3d11.674902429396719!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a54bbdc08aba223%3A0x3b711e776ab733dc!2sAzhagappasamudram!5e0!3m2!1sen!2sin!4v1689501650703!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form> -->
           </div>
 
         </div>
@@ -581,10 +555,6 @@
         &copy; Copyrights <strong><span>Pazhanisamy k </span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         @2023, <a href="#">All rigths reserved</a>
       </div>
     </div>
