--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong> accademic projects</strong> completed</p>
+              <p><strong> Academic projects</strong> completed</p>
             </div>
           </div>
 
