--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -117,13 +117,13 @@
                 <li><strong>Category</strong>: Web/Mobile App</li>
                 <li><strong>Client</strong>: Own Projects</li>
                 <li><strong>Project date</strong>: 16 Jul, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://pazhanisamy.netlify.app/">https://pazhanisamy.netlify.app/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://pazhani.netlify.app/">https://pazhani.netlify.app/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Projects details</h2>
               <p>
-                ETT is the React Native Mobile application made to monitor the team members leve and permission, Team members cam apply leave and permissions through this application.
+                ETT is the React Native Mobile application made to monitor the team members leave and permission, Team members cam apply leave and permissions through this application.
               </p>
               <p>
                 music application ( mobile application - Java ) made to listen the local music from our mobile, We can customise the color and design, more user friendly.
